--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>ICARUS Project Demo Page</h1>
+<h1>My Main Portfolio</h1>
 <p>Coming soon...</p>
 </body>
 </html>
